<resources>
    <string name="app_name">calculator</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="convert">±</string>
</resources>