<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_Text"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:textSize="65sp"
            android:gravity="end|bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_clear"
            android:background="@drawable/button_special"
            android:text="@string/clear"
            style="@style/Button_special"/>

        <Button
            android:id="@+id/btn_del"
            android:background="@drawable/button_special"
            android:text="@string/delete"
            android:textSize="30sp"
            style="@style/Button_special"/>

        <Button
            android:id="@+id/btn_percent"
            android:background="@drawable/button_special"
            android:text="@string/percent"
            style="@style/Button_special"/>

        <Button
            android:id="@+id/btn_divide"
            android:background="@drawable/button_operator"
            android:text="@string/divide"
            style="@style/Button_operator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_7"
            android:text="7"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_8"
            android:text="8"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_9"
            android:text="9"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_multiply"
            android:text="@string/multiply"
            android:background="@drawable/button_operator"
            style="@style/Button_operator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_4"
            android:text="4"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_5"
            android:text="5"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_6"
            android:text="6"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_minus"
            android:background="@drawable/button_operator"
            android:text="@string/minus"
            style="@style/Button_operator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_1"
            android:text="1"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_2"
            android:text="2"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_3"
            android:text="3"
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_plus"
            style="@style/Button_operator"
            android:background="@drawable/button_operator"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_0"
            android:textSize="35sp"
            android:gravity="center"
            android:text="0"
            android:background="@drawable/button_numbers"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_point"
            android:text="."
            android:background="@drawable/button_numbers"
            style="@style/Button_numbers"/>

        <Button
            android:id="@+id/btn_equals"
            android:text="@string/equal"
            android:background="@drawable/button_operator"
            style="@style/Button_operator"/>

    </LinearLayout>

</LinearLayout>